terraform-templates/tf-sg/sg.tf
provider "aws" {
   region = us-east-2
}

#Create security group with firewall rules
resource "aws_security_group" "tcn_security_grp" {
  name        = "Sample Security Group"
  description = "security group for allowing SSH traffic to EC2 instances"
  vpc_id      = vpc-075781aea2660ba21
}

ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Sample Security Group"
  }
}
